// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Facet filter nested list item  should render active filter view 1`] = `
<FacetsFilterNestedListItem
  classes={
    Object {
      "inset": "FacetsFilterNestedListItem-inset-3 inset",
      "listItemGutters": "FacetsFilterNestedListItem-listItemGutters-1 listItemGutters",
      "listText": "FacetsFilterNestedListItem-listText-2",
      "selectedFacet": "FacetsFilterNestedListItem-selectedFacet-4 selectedFacet",
    }
  }
  disabled={false}
  index={0}
  isActive={true}
  onFacetClick={[MockFunction]}
  primaryText="Test filter"
/>
`;

exports[`Facet filter nested list item  should render default filter view 1`] = `
<FacetsFilterNestedListItem
  classes={
    Object {
      "inset": "FacetsFilterNestedListItem-inset-3 inset",
      "listItemGutters": "FacetsFilterNestedListItem-listItemGutters-1 listItemGutters",
      "listText": "FacetsFilterNestedListItem-listText-2",
      "selectedFacet": "FacetsFilterNestedListItem-selectedFacet-4 selectedFacet",
    }
  }
  disabled={false}
  index={0}
  isActive={false}
  onFacetClick={[MockFunction]}
  primaryText="Test filter"
/>
`;

exports[`Facet filter nested list item  should render disabled filter view 1`] = `
<FacetsFilterNestedListItem
  classes={
    Object {
      "inset": "FacetsFilterNestedListItem-inset-3 inset",
      "listItemGutters": "FacetsFilterNestedListItem-listItemGutters-1 listItemGutters",
      "listText": "FacetsFilterNestedListItem-listText-2",
      "selectedFacet": "FacetsFilterNestedListItem-selectedFacet-4 selectedFacet",
    }
  }
  disabled={true}
  index={0}
  isActive={true}
  onFacetClick={[MockFunction]}
  primaryText="Test filter"
/>
`;
